<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".userentry.SignUpFragment">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/logo"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signUpName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:padding="14dp"
        android:inputType="text"
        android:textColor="@color/white"
        android:background="@drawable/edittext_background"
        android:textColorHint="@color/white"
        android:drawablePadding="20dp"
        android:drawableStart="@drawable/ic_profile"
        android:hint="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoImage" />

    <EditText
        android:id="@+id/signUpSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:padding="14dp"
        android:inputType="text"
        android:textColor="@color/white"
        android:background="@drawable/edittext_background"
        android:textColorHint="@color/white"
        android:drawablePadding="20dp"
        android:drawableStart="@drawable/ic_people"
        android:hint="@string/surname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpName"/>

    <EditText
        android:id="@+id/signUpEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:padding="14dp"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:background="@drawable/edittext_background"
        android:textColorHint="@color/white"
        android:drawablePadding="20dp"
        android:drawableStart="@drawable/ic_email"
        android:hint="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpSurname"/>

    <EditText
        android:id="@+id/signUpPasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="20dp"
        android:padding="14dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpEmail" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:background="@drawable/button_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpPasswordText"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp" />

</androidx.constraintlayout.widget.ConstraintLayout>